--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://SergejShk.github.io/project-filmoteka",
+  "homepage": "https://VladMasl.github.io/FILMOTEKA",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /project-filmoteka/"
+    "build": "parcel build src/*.html --public-url /FILMOTEKA/"
   },
   "repository": {
     "type": "git",
